// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rendering and clickable input 1`] = `
<div>
  <div
    class="m-auto flex max-w-[320px] flex-col gap-1"
  >
    <div
      class="grid grid-cols-[repeat(3,_auto)] gap-3"
    >
      <button
        aria-label="outer bull"
        class="text-white bg-red-500 hover:bg-red-400 disabled:bg-red-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        Outer Bull
      </button>
      <button
        aria-label="inner bull"
        class="text-white bg-indigo-700 hover:bg-indigo-500 disabled:bg-indigo-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        Inner Bull
      </button>
      <button
        aria-label="out board"
        class="flex w-fit justify-center rounded-md border border-gray-300 p-3 disabled:opacity-50 w-full"
        type="button"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc />
          <path
            d="M0 0h24v24H0z"
            fill="none"
            stroke="none"
          />
          <path
            d="M11.286 11.3a1 1 0 0 0 1.41 1.419"
          />
          <path
            d="M8.44 8.49a5 5 0 0 0 7.098 7.044m1.377 -2.611a5 5 0 0 0 -5.846 -5.836"
          />
          <path
            d="M5.649 5.623a9 9 0 1 0 12.698 12.758m1.683 -2.313a9 9 0 0 0 -12.076 -12.11"
          />
          <path
            d="M3 3l18 18"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-3 grid-rows-1 gap-x-2 gap-y-1"
    >
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 "
        >
          Single
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 "
        >
          Double
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 "
        >
          Triple
        </span>
      </div>
      <button
        aria-label="1"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        1
      </button>
      <button
        aria-label="1 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        1
      </button>
      <button
        aria-label="1 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        1
      </button>
      <button
        aria-label="2"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        2
      </button>
      <button
        aria-label="2 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        2
      </button>
      <button
        aria-label="2 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        2
      </button>
      <button
        aria-label="3"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        3
      </button>
      <button
        aria-label="3 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        3
      </button>
      <button
        aria-label="3 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
      >
        3
      </button>
    </div>
  </div>
</div>
`;

exports[`should rendering and disable input 1`] = `
<div>
  <div
    class="m-auto flex max-w-[320px] flex-col gap-1"
  >
    <div
      class="grid grid-cols-[repeat(3,_auto)] gap-3"
    >
      <button
        aria-label="outer bull"
        class="text-white bg-red-500 hover:bg-red-400 disabled:bg-red-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        Outer Bull
      </button>
      <button
        aria-label="inner bull"
        class="text-white bg-indigo-700 hover:bg-indigo-500 disabled:bg-indigo-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        Inner Bull
      </button>
      <button
        aria-label="out board"
        class="flex w-fit justify-center rounded-md border border-gray-300 p-3 disabled:opacity-50 w-full"
        disabled=""
        type="button"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc />
          <path
            d="M0 0h24v24H0z"
            fill="none"
            stroke="none"
          />
          <path
            d="M11.286 11.3a1 1 0 0 0 1.41 1.419"
          />
          <path
            d="M8.44 8.49a5 5 0 0 0 7.098 7.044m1.377 -2.611a5 5 0 0 0 -5.846 -5.836"
          />
          <path
            d="M5.649 5.623a9 9 0 1 0 12.698 12.758m1.683 -2.313a9 9 0 0 0 -12.076 -12.11"
          />
          <path
            d="M3 3l18 18"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-3 grid-rows-1 gap-x-2 gap-y-1"
    >
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Single
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Double
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Triple
        </span>
      </div>
      <button
        aria-label="20"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="20 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="20 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="19"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="19 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="19 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="18"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
      <button
        aria-label="18 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
      <button
        aria-label="18 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
    </div>
  </div>
</div>
`;

exports[`should rendering only cricket numbers 1`] = `
<div>
  <div
    class="m-auto flex max-w-[320px] flex-col gap-1"
  >
    <div
      class="grid grid-cols-[repeat(3,_auto)] gap-3"
    >
      <button
        aria-label="outer bull"
        class="text-white bg-red-500 hover:bg-red-400 disabled:bg-red-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        Outer Bull
      </button>
      <button
        aria-label="inner bull"
        class="text-white bg-indigo-700 hover:bg-indigo-500 disabled:bg-indigo-300 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        Inner Bull
      </button>
      <button
        aria-label="out board"
        class="flex w-fit justify-center rounded-md border border-gray-300 p-3 disabled:opacity-50 w-full"
        disabled=""
        type="button"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc />
          <path
            d="M0 0h24v24H0z"
            fill="none"
            stroke="none"
          />
          <path
            d="M11.286 11.3a1 1 0 0 0 1.41 1.419"
          />
          <path
            d="M8.44 8.49a5 5 0 0 0 7.098 7.044m1.377 -2.611a5 5 0 0 0 -5.846 -5.836"
          />
          <path
            d="M5.649 5.623a9 9 0 1 0 12.698 12.758m1.683 -2.313a9 9 0 0 0 -12.076 -12.11"
          />
          <path
            d="M3 3l18 18"
          />
        </svg>
      </button>
    </div>
    <div
      class="grid grid-cols-3 grid-rows-1 gap-x-2 gap-y-1"
    >
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Single
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Double
        </span>
      </div>
      <div
        class="h-full text-center"
      >
        <span
          class="text-sm font-bold text-gray-700 disabled:opacity-50 opacity-40"
        >
          Triple
        </span>
      </div>
      <button
        aria-label="20"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="20 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="20 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        20
      </button>
      <button
        aria-label="19"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="19 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="19 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        19
      </button>
      <button
        aria-label="18"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
      <button
        aria-label="18 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
      <button
        aria-label="18 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        18
      </button>
      <button
        aria-label="17"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        17
      </button>
      <button
        aria-label="17 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        17
      </button>
      <button
        aria-label="17 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        17
      </button>
      <button
        aria-label="16"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        16
      </button>
      <button
        aria-label="16 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        16
      </button>
      <button
        aria-label="16 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        16
      </button>
      <button
        aria-label="15"
        class="text-gray-600 border-gray-300 bg-white hover:bg-gray-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        15
      </button>
      <button
        aria-label="15 double"
        class="text-emerald-600 border-emerald-600 bg-white hover:bg-emerald-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        15
      </button>
      <button
        aria-label="15 triple"
        class="text-pink-600 border-pink-500 bg-white hover:bg-pink-50 disabled:opacity-50 w-fit rounded-lg border p-2 text-sm font-bold subpixel-antialiased disabled:cursor-not-allowed md:px-3 md:text-base w-full"
        disabled=""
      >
        15
      </button>
    </div>
  </div>
</div>
`;
